mobile-first-essetials

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,5 +1,6 @@
+@import "../../../node_modules/normalize.css/normalize.css";
+@import "scss/global";
 @import "scss/variables";
+@import "scss/mixin";
 @import "scss/large-hero";
 @import "scss/btn";
-@import "scss/global";
-@import "../../../node_modules/normalize.css/normalize.css";
