--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -2,5 +2,7 @@
 @import "scss/global";
 @import "scss/variables";
 @import "scss/mixin";
+@import "scss/wrapper";
+@import "scss/page-section";
 @import "scss/large-hero";
 @import "scss/btn";
