--- a/app/assets/styles/scss/_btn.scss
+++ b/app/assets/styles/scss/_btn.scss
@@ -10,7 +10,10 @@
   }
 
   &--large {
-    font-size: 1.25rem;
     padding: 1.1rem 1.2rem;
+
+    @include atSmall {
+      font-size: 1.25rem;
+    }
   }
 }
