--- a/app/assets/styles/scss/_large-hero.scss
+++ b/app/assets/styles/scss/_large-hero.scss
@@ -1,5 +1,10 @@
 .large-hero {
   position: relative;
+  border-bottom: 10px solid $mainBlue;
+
+  &__image {
+    display: block;
+  }
 
   &__text-content {
     position: absolute;
@@ -13,17 +18,10 @@
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 1.1rem;
+    font-size: 2.4rem;
     margin: 0;
 
     @include atSmall {
-      font-size: 2rem;
-    }
-    @include atMedium {
-      font-size: 3.2rem;
-    }
-
-    @include atLarge {
       font-size: 4.8rem;
     }
   }
@@ -31,7 +29,7 @@
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     margin: 0;
 
     @include atSmall {
@@ -41,11 +39,15 @@
 
   &__description {
     color: #fff;
-    font-size: 1.8rem;
+    font-size: 1.1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
+
+    @include atSmall {
+      font-size: 1.8rem;
+    }
   }
 }
