--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -4,5 +4,6 @@
 @import "scss/mixin";
 @import "scss/wrapper";
 @import "scss/page-section";
+@import "scss/headline";
 @import "scss/large-hero";
 @import "scss/btn";
