--- a/app/assets/styles/scss/_wrapper.scss
+++ b/app/assets/styles/scss/_wrapper.scss
@@ -4,4 +4,14 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+
+  &--medium {
+    max-width: 976px;
+  }
+
+  // below means any wrapper in another wrapper must have zero padding
+  .wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
