colum-layout-block

--- a/app/assets/styles/scss/_mixin.scss
+++ b/app/assets/styles/scss/_mixin.scss
@@ -15,3 +15,12 @@
     @content;
   }
 }
+
+@mixin clearFix {
+  // float-clear
+  &::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+}
