--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -5,5 +5,6 @@
 @import "scss/wrapper";
 @import "scss/page-section";
 @import "scss/headline";
+@import "scss/row";
 @import "scss/large-hero";
 @import "scss/btn";
