--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,10 +1,11 @@
 @import "../../../node_modules/normalize.css/normalize.css";
-@import "scss/global";
 @import "scss/variables";
+@import "scss/global";
 @import "scss/mixin";
 @import "scss/wrapper";
 @import "scss/page-section";
 @import "scss/headline";
 @import "scss/row";
+@import "scss/generic-content-container";
 @import "scss/large-hero";
 @import "scss/btn";
