--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -6,6 +6,8 @@
 @import "scss/page-section";
 @import "scss/headline";
 @import "scss/row";
+@import "scss/section-title";
 @import "scss/generic-content-container";
 @import "scss/large-hero";
 @import "scss/btn";
+@import "scss/feature-item";
