--- a/app/assets/styles/scss/_page-section.scss
+++ b/app/assets/styles/scss/_page-section.scss
@@ -9,4 +9,26 @@
     background-color: $mainBlue;
     color: #fff;
   }
+
+  &--testimonials {
+    background-color: #e0e6ef;
+    @include atLarge {
+      background: url("/assets/images/testimonials-bg.jpg") no-repeat top /
+        cover;
+    }
+  }
+
+  &--no-b-padding-until-medium {
+    padding-bottom: 0;
+    @include atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+
+  &--no-b-padding-until-large {
+    padding-bottom: 0;
+    @include atLarge {
+      padding-bottom: 4.5rem;
+    }
+  }
 }
