--- a/app/assets/styles/scss/_row.scss
+++ b/app/assets/styles/scss/_row.scss
@@ -51,4 +51,104 @@
   &--gutters-large > div {
     padding-right: 100px;
   }
+
+  // testimonial-section-title-fix
+  &--t-padding {
+    padding-top: 80px;
+  }
+  &--gutters-small {
+    margin-right: -45px;
+  }
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
+}
+
+.row {
+  @include clearFix;
+
+  @include atLarge {
+    &__Large-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__Large-8 {
+      float: right;
+      width: 66.66%;
+    }
+  }
+
+  &--gutters {
+    margin-right: -65px;
+  }
+  // !  > is used to select all direct children [ie direct children of row]
+  &--gutters > div {
+    padding-right: 65px;
+  }
+
+  &__b-margin-until-large {
+    margin-bottom: 1rem;
+  }
+
+  @include atLarge {
+    margin-bottom: 0;
+  }
+
+  @include atLarge {
+    &__large-4--larger {
+      width: 37%;
+    }
+    &__large-8--smaller {
+      width: 63%;
+    }
+  }
+
+  // feature section
+  &__large-6 {
+    float: left;
+    width: 50%;
+  }
+
+  &--gutters-large {
+    margin-right: -100px;
+  }
+
+  &--gutters-large > div {
+    padding-right: 100px;
+  }
+
+  // testimonial-section-title-fix
+  &--t-padding {
+    padding-top: 80px;
+  }
+  &--gutters-small {
+    margin-right: -45px;
+  }
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
+}
+
+// equal height rule
+.row--equal-height-at-medium {
+  @include atMedium {
+    display: flex;
+  }
+
+  & > div {
+    float: none;
+    display: flex;
+  }
+}
+
+.row--equal-height-at-large {
+  @include atLarge {
+    display: flex;
+  }
+
+  & > div {
+    float: none;
+    display: flex;
+  }
 }
