--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -13,3 +13,5 @@
 @import "scss/feature-item";
 @import "scss/testimonial";
 @import "scss/site-footer";
+@import "scss/site-header";
+@import "scss/primary-nav";
