--- a/app/assets/styles/scss/_primary-nav.scss
+++ b/app/assets/styles/scss/_primary-nav.scss
@@ -1,6 +1,14 @@
 .primary-nav {
+  padding-top: 10px;
+
+  @include atMedium {
+    padding-top: 0;
+  }
+
   &--pull-right {
-    float: right;
+    @include atMedium {
+      float: right;
+    }
   }
 
   ul {
@@ -11,15 +19,36 @@
 
   li {
     list-style: none;
-    float: left;
-    padding-right: 20px;
+    display: inline-block;
+    padding-right: 7px;
+
+    @include atMedium {
+      float: left;
+      display: block;
+      padding-right: 20px;
+    }
+  }
+
+  li:last-child {
+    padding-right: 0;
+    @include atMedium {
+      padding-right: 20px;
+    }
   }
 
   a {
     color: #fff;
     text-decoration: none;
     font-weight: 300;
-    padding: 12px 0;
+    padding: 5px 8px;
+    font-size: 0.8rem;
     display: block;
+    background-color: rgba($mainBlue, 0.5);
+
+    @include atMedium {
+      padding: 12px 0;
+      font-size: 1rem;
+      background-color: transparent;
+    }
   }
 }
