--- a/app/assets/styles/scss/_site-header.scss
+++ b/app/assets/styles/scss/_site-header.scss
@@ -12,7 +12,12 @@
   }
 
   @include atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, 0.3);
+
+    &--dark {
+      background-color: rgba(23, 51, 72, 0.85);
+    }
   }
 
   &__btn-container {
@@ -25,14 +30,22 @@
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transition: transform 0.3s ease-out;
+    transform: translateX(-50%) scale(0.8);
+    transform-origin: 50% 0;
     background-color: $mainBlue;
     padding: 13px 29px;
 
     @include atMedium {
       left: auto;
-      transform: translateX(0);
+      transform: translateX(0) scale(1);
       padding: 25px 36px;
+
+      // this will only target the logo element whe the dark is being used
+      .site-header--dark & {
+        transform: scale(0.52);
+        transform-origin: 50% 0;
+      }
     }
   }
 
