updated-for-modal-section

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -16,3 +16,5 @@
 @import "scss/site-header";
 @import "scss/primary-nav";
 @import "scss/Reveal-item";
+@import "scss/modal";
+@import "scss/social-icons";
