--- a/app/assets/styles/scss/_section-title.scss
+++ b/app/assets/styles/scss/_section-title.scss
@@ -30,4 +30,10 @@
   &--blue {
     color: $mainBlue;
   }
+
+  // modal-section
+  &--less-margin {
+    margin-bottom: 1.3rem;
+    margin-top: 0;
+  }
 }
